--- a/figther-plane's mean.html
+++ b/figther-plane's mean.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="fighter1">
-      <h1 class="title"><a href="home.html" class="a">Fight Plane</a></h1>
+      <h1 class="title"><a href="index.html" class="a">Fight Plane</a></h1>
       <nav>
         <ul class="menu">
           <li class="li"><a class="a" href="figther-plane's mean.html"><strong>전투기에 대하여</strong></a></li>
